# UVTextureConverter

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yml  test_master.yml
UVTextureConverter/: Atlas2Normal.py  Normal2Atlas.py  UVConverter.py  __init__.py
config/: normal.pickle  normal_faces.pickle
docs/: normal_faces.py  normal_hash.py
notebook/: convert_demo.ipynb  convert_texture_between_normal_and_altas.ipynb  create_uv_texture_from_image_by_using_densepose.ipynb  create_uv_texture_from_video_by_using_densepose.ipynb  densepose_convert_demo.ipynb  densepose_transform.ipynb  video_inpainting.ipynb
tests/: test_convert.py
