[metadata]
name = UVTextureConverter
version = 1.0.0
description = To convert atlas texuture (defined in Densepose) to normal texture (defined in SMPL), and vice versa.
author = Kubo Shizuma
url = https://github.com/kuboshizuma/UVTextureConverter

[options]
packages = find:
include_package_data = True
install_requires =
  numpy
  scipy
  tqdm

[options.packages.find]
exclude =
  demo
  docs
  tests
