[metadata]
name = UVTextureConverter
version = 1.1.2
description = To convert atlas texuture (defined in Densepose) to normal texture (defined in SMPL), and vice versa.
author = Shizuma Kubo
url = https://github.com/kuboshizuma/UVTextureConverter

[options]
packages = find:
include_package_data = True
install_requires =
  numpy
  scipy
  tqdm

[options.packages.find]
exclude =
  docs
  input
  notebook

[isort]
multi_line_output = 5

[flake8]
max-line-length = 140
exclude =
  UVTextureConverter/__init__.py
